feat(junit5): @RiftTest Tier-2 — @RegisterExtension builder + dumpRecordedOnFailure diagnostics (#45) (#49)
Programmatic RiftTestExtension.newInstance() builder usable as @RegisterExtension (dual-mode with the annotation path); TestWatcher publishes each imposter's recorded requests as report entry rift.recorded.<name> on failure, capped at 20; RiftTest.dumpRecordedOnFailure() attribute; docs/junit5.md updated; junit-platform-testkit test dep.